--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             height: 20px;
             color:goldenrod;
         }
+        /* Currículo usando HTML E CSS */
     </style>
     <body>
         <div id="cabeçalho">
